--- a/web-app/ChartLibrary.html
+++ b/web-app/ChartLibrary.html
@@ -24,7 +24,7 @@ var XYScatterChart = new TURFINSIGHT.Chart.XYScatterChart();
 var BubbleChart = new TURFINSIGHT.Chart.BubbleChart();
 $(document).ready(function(){
 loadvalues();
-plot();
+//plot();
 });
 var d1 = [[[1, 3, 10],[2,15,10],[1,22,13],[3,36,9]],[[2, 2, 10], [4, 8, 2], [6, 5, 2], [8, 0, 4], [9, 50, 30]]]
 var d2 = [[2, 2, 10], [4, 8, 2], [6, 5, 2], [8, 0, 4], [9, 50, 30]]
@@ -79,7 +79,7 @@ function loadvalues(){
 		$("#options").val('[{legend : true,hoverable: true,clickable: true,type:{ points:true}}]')		
 	}
 	if($("#chart").val()=="Bubble"){
-		$("#data").val("[[9,7,8,3,6],[3,8,5,13,7],[13,4,8,5,9]]")
+		$("#data").val("[[5,10,15,20],[[2,4,6,8],[12,14,16,18]],[[1,3,5,7],[11,13,15,17]]]")
 		$("#options").val("[{series : {lines : {show:false}},xaxis: {autoscaleMargin: true} ,yaxis: {autoscaleMargin: true},grid: {tickColor: '#000'},shadowSize: 3}]")		
 	}	
 	plot();	
